<resources>
    <string name="app_name">Lexio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="LexioTitle">Lexio word learner</string>
    <string name="lexio.Decsription">Lexio is a language dictionary with train capabilities</string>
    <string name="nav.MyDictionaries">My dictionaries</string>
    <string name="nav.Training">Training</string>
    <string name="nav.Statistics">Statistics</string>
    <string name="nav.Settings">Settings</string>
    <string name="dictionaries.Add">Add dictionary</string>
    <string name="dialog.Create">Create</string>
    <string name="dialog.Choose">Ok</string>
    <string name="dialog.Cancel">Cancel</string>
    <string name="dictionaries.EnterTitle">Enter dictionary name</string>
    <string name="dialog.EnterTextHint">Enter text here..</string>
    <string name="dictionaries.EnterLanguage">Enter dictionary language</string>
    <string name="dictionaries.Delete">Delete dictionary</string>
    <string name="dictionaries.Delete.Alert">Are you sure you want to delete the selected dictionaries? (this will also delete your words)</string>
    <string name="dialog.Delete">Delete</string>
    <string name="dictionaries.Deletion">Dictionary deletion</string>
    <string name="dictionaries.Active">Make your active</string>
    <string name="dictionaries.ActiveFlag">active</string>
    <string name="nav.MyDictionary">No active dictionary</string>
    <string name="nav.MyDictionariesGroup">Dictionaries and words</string>
    <string name="train.WordTrans">Word - Translation</string>
    <string name="train.TransWord">Translation - Word</string>
    <string name="train.TransWrite">Write word by translation</string>
    <string name="train.WordAudio">Audio - Translation</string>
    <string name="stat.HardWords">Hard words</string>
    <string name="train.WordsByDay">Words, trained by days</string>
    <string name="word.Add">Add word</string>
    <string name="word.Del">Delete word</string>
    <string name="word.EnterWordHint">Enter word</string>
    <string name="word_get_translation">Get translation</string>
    <string name="word.EnterTranslationHint">Enter translation</string>
    <string name="word.EnterContextHint">Enter word context</string>
    <string name="words_Deletion">Words deletion</string>
    <string name="words_Delete_Alert">Would you like to delete selected words?</string>
    <string name="common.Search">Search</string>
    <string name="settings.ClearStatistics">Clear</string>
    <string name="training.DontKnowButton">I DO NOT KNOW</string>
    <string name="chart.HardWords.IncorrectLabel">Incorrect answers</string>
    <string name="chart.HardWords.CorrectLabel">Correct answers</string>
    <string name="Word.WordSavedMessage"> saved to dictionary</string>
    <string name="train.TransVoice">Translation - Voice input</string>
    <string name="training_trans_voice_taponmic">Tap on mic to speak the word</string>
    <string name="TransVoiceSpeechPromt">Say the word according to translation</string>
    <string name="speech_not_supported">Voice recognition does not supported by your android device</string>
    <string name="Training.TransVoice.AnswerPrefix">You answered:</string>
    <string name="Training_TransVoice_CorrectAnswerPrefix">Correct answer:</string>
    <string name="train.Cards">Cards</string>
    <string name="Training.Cards.EndPageLabel">You are just trained %d cards. You can try training it again or traing next</string>
    <string name="training.Order.Hard">Mistaken</string>
    <string name="training.Order.New">New</string>
    <string name="training.Order.Old">Old</string>
    <string name="training_Order_Random">Random</string>
    <string name="training.Order.Hard_Descr">Words in which you have many mistakes</string>
    <string name="training.Order.New_Descr">Newest added words to the dictionary</string>
    <string name="training.Order.Old_Descr">The most old-trained words</string>
    <string name="training_Order_Random_Descr">Random words from dictionary</string>
    <string name="training.Start">Start training</string>
    <string name="training.Start.WordCount">Word count:</string>
    <string name="training.Start.WordOrder">Word order:</string>
    <string name="training.Start.Title">Setup your training</string>
    <string name="training_order_None">-</string>
    <string name="training.Word.Empty">There are no words to train. Choose another training or choose another order options</string>
    <string name="pref_word_order">pref_word_order</string>
    <string name="pref_word_count">pref_word_count</string>
    <string name="settings.Clear.Stat">Clear the statistics?</string>
    <string name="settings.ClearAlert.Header">Statistics clear</string>
    <string name="settings.ClearAlert.Message">Are you sure you would like to delete all word statistics? (This will erase you wrong word statistic, new/old word. etc)</string>
    <string name="dialog_Clear">Clear</string>
    <string name="training.Start.AnswerTimer">Limit time for one word (in seconds)</string>
    <string name="Training.EnterWord.EnterWordHint">Enter translation</string>
    <string-array name="training_Start_AnswerTimerOptions">
        <item>No limit</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="training.Answer">Answer</string>
    <string name="word_get_translation_lingvo">Abbyy Lingvo</string>
    <string name="words.AddWord.Translation.ProgressTitle">Retrieving translation...</string>
    <string name="words.AddWord.Translation.ProgressMessage">Please wait, retrieving translation from BING</string>
    <string name="words.AddWord.CantloadTranslation">Can\'t load translation</string>
    <string name="action_word_edit">Edit word</string>
    <string name="dialog_Save">Save</string>
    <string name="action_word_copy">Copy</string>
    <string name="action_word_move">Move</string>
    <string name="msg_action_word_move_success">successfully moved to dictionary</string>
    <string name="msg_action_word_nodict">There is no dictionary found. Please create a new dictionary with language equal to current dictionary\'s language</string>
    <string name="defaultDictDescription">Default dictionary</string>
    <string name="defdict_eng_basic">English basic</string>
    <string name="defdict_loading_title">Importing default dictionaries...</string>
    <string name="defdict_loading_msg">Please wait, while lexio is loading default dictionaries</string>
    <string name="dialog_move_to_dict">Move word to dictionary</string>
    <string name="dictionaries.Edit">Edit dictionary</string>
    <string-array name="training_ExtraAnswers_ru">
        <item>пекарь</item>
        <item>библиотека</item>
        <item>ружье</item>
        <item>ежик</item>
        <item>овсянка</item>
        <item>телефон</item>
        <item>организация</item>
    </string-array>
    <string-array name="training_ExtraAnswers_en">
        <item>toad</item>
        <item>yellow</item>
        <item>free</item>
        <item>zoo</item>
        <item>wolf</item>
        <item>salmon</item>
        <item>brick</item>
    </string-array>
    <string-array name="training_ExtraAnswers_fr">
        <item>boulanger</item>
        <item>bibliothèque</item>
        <item>pistolet</item>
        <item>hérisson</item>
        <item>flocons d\'avoine</item>
        <item>téléphone</item>
        <item>organisation</item>
    </string-array>
    <string-array name="training_ExtraAnswers_de">
        <item>bäcker</item>
        <item>bibliothek</item>
        <item>gewehr</item>
        <item>igel</item>
        <item>haferflocken</item>
        <item>telefon</item>
        <item>organisation</item>
    </string-array>
    <string-array name="training_ExtraAnswers_it">
        <item>Baker</item>
        <item>biblioteca</item>
        <item>pistola</item>
        <item>riccio</item>
        <item>farina d\'avena</item>
        <item>telefono</item>
        <item>organizzazione</item>
    </string-array>
    <string-array name="training_ExtraAnswers_es">
        <item>panadero</item>
        <item>biblioteca</item>
        <item>arma</item>
        <item>erizo</item>
        <item>avena</item>
        <item>teléfono</item>
        <item>organización</item>
    </string-array>
    <string name="pref_clear_statistics">Word statistics clearing</string>
    <string name="pref_clear_statistics_summary">This operation will delete all you learning progress. You will be warned once again before deleting progress</string>
    <string name="pref_word_progress_factor">Word 100% progress</string>
    <string name="pref_word_progress_factor_summary">Word 100% learning progress is calculated as: correct answers minus incorrect answers. Specify this value as 100% word learning progress</string>
    <string name="pref_alarm_training">Remind about word learning</string>
    <string name="pref_alarm_training_summary_on">Lexio will remind you to learn and train words</string>
    <string name="pref_alarm_training_summary_off">Lexio won\'t make reminders</string>
    <string name="pref_alarm_training_summary">Lexio can make every day\'s reminder to learn and train words</string>
    <string name="notify_word_learn_title">Lexio Word Learn</string>
    <string name="notify_word_learn_body">Lexio reminds you to learn and train words for today</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="pref_alarm_category">Reminders</string>
    <string name="pref_alarm_training_time">Reminder time</string>
    <string name="pref_alarm_training_time_summary">Every day\'s reminder</string>
    <string name="dialog_GotIt">GOT IT</string>
    <string name="tutorial_words_list">This is a word\'s list in active dictionary. Every word has got translation, transcription and a learning progress</string>
    <string name="tutorial_words_filter">This is a word\'s list filter / word search. You can search by word or by translation</string>
    <string name="tutorial_words_list_item">This is a word. It contains translation, transcription and a learning progress</string>
    <string name="tutorial_words_list_item_2">Tou can swipe the word\'s row to show actions: modifying, moving to dictionary, removing</string>
    <string name="nav.Help">Help</string>
    <string name="tutorial_help">Now you can walk through Lexio to show helpful tips</string>
    <string name="tutorial_dict_list">This is your dictionaries list</string>
    <string name="tutorial_dict_list_item">This is a dictionary. Here you can see word count and dictionary\'s active indicator. In the same time there can be only one active dictionary.</string>
    <string name="tutorial_dict_list_item_2">You can swipe the dictionary\'s row to show actions: modifying, activation, removing</string>
    <string name="tutorial_words_add_global">This is a button to add single word. It is available in every part of Lexio.</string>
    <string name="pref_training_voice_show_transcription">Word pronunciation - transcription</string>
    <string name="pref_training_voice_show_transcription_summary">Show word\'s transcription in training \"Word pronunciation\"</string>
    <string name="msg_action_words_move_success">Selected words moved successfully to</string>
    <string name="dialog_word_orders">Choose word order</string>
    <string name="dialog_word_count">Choose word count</string>
    <string name="dialog_word_count_descr">Choose word count to show in training</string>
    <string name="words_suffix">words</string>
    <string name="dialog_word_time">Choose time for one word</string>
    <string name="training_Start_AnswerTimerNoLimit">No time limit</string>
    <string name="seconds">seconds</string>
</resources>